<resources>
    <string name="app_name">ScreenCapture Sender V1</string>
    <string name="server_url_hint">Ex: http://192.168.0.10:8000/upload</string>
    <string name="interval_hint">Intervalo em ms</string>
    <string name="delay_hint">Atraso inicial em ms</string>
    <string name="quality_hint">Qualidade JPEG 1-100</string>
    <string name="start_button">Ligar</string>
    <string name="stop_button">Desligar</string>
    <string name="status_title">Status</string>
</resources>
